# eroll_transliteration

./: .gitignore  Makefile  README.md  pyproject.toml
data/: README.md
eroll/: __init__.py  dataverse.py  extract_pairs.py  parallel_pairs.py  pipeline.py  pricing.py  states.py  transliterate_rolls.py
tests/: test_dataverse.py  test_extract_pairs.py  test_parallel_pairs.py  test_pipeline.py  test_states.py
